# recompyle

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml
example/: flat_profiler.py  rewrite_wrap_calls.py  shallow_call_profiler.py  wrap_calls.py
recompyle/: __about__.py  __init__.py  performance.py
recompyle/applied/: __init__.py  flat_profiler.py  shallow_profiler.py
recompyle/decorators/: __init__.py  decorate_function.py
recompyle/rewrite/: __init__.py  rewrite_function.py
recompyle/transformers/: __init__.py  base.py  function.py
src/: _src_rewrite.py  call_wrapper.py  example.py  example_profiler.py  example_simple.py  flat_profiler.py
tests/function/: test_extras.py  test_flat_profiler.py  test_ignore_calls.py  test_rewrite_basic.py  test_shallow_profiler.py  test_traceback.py
